syntax = "proto3";
package pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "pylons/pylons/google_iap_order.proto";
import "pylons/pylons/execution.proto";
import "pylons/pylons/item.proto";
import "pylons/pylons/recipe.proto";
import "pylons/pylons/cookbook.proto";
import "pylons/pylons/trade.proto";
import "pylons/pylons/payment_info.proto";
import "pylons/pylons/redeem_info.proto";

message EventBurnDebtToken {
  RedeemInfo redeem_info = 1 [ (gogoproto.nullable) = false ];
}


message EventCreateAccount {
  string address = 1;
  string username = 2;
}

message EventUpdateAccount {
  string address = 1;
  string username = 2;
}

message EventRegisterKYCAccount {
  string address = 1;
  string username = 2;
  uint64 level = 3;
  string provider = 4;
  string provider_id = 5;
}

message EventRemoveKYCAccount {
  string address = 1;
  string username = 2;
  uint64 level = 3;
  string provider = 4;
  string provider_id = 5;
}

message EventCreateCookbook {
  string creator = 1;
  string id = 2;
}

// EventUpdateCookbook contains a record of the cookbook pre-update.  The
// updated fields can be found by the message emitted by MsgUpdateCookbook
message EventUpdateCookbook {
  Cookbook original_cookbook = 1 [ (gogoproto.nullable) = false ];
}

message EventTransferCookbook {
  string sender = 1;
  string receiver = 2;
  string id = 3;
}

message EventCreateRecipe {
  string creator = 1;
  string cookbook_id = 2;
  string id = 3;
}

// EventUpdateRecipe contains a record of the recipe pre-update.  The updated
// fields can be found by the message emitted by MsgUpdateRecipe
message EventUpdateRecipe {
  Recipe original_recipe = 1 [ (gogoproto.nullable) = false ];
}

// EventCreateExecution contains the creator and id of a created execution.
// Execution ids are of the form {count-targetBlockHeight}
message EventCreateExecution {
  string creator = 1;
  string id = 2;
  repeated PaymentInfo payment_infos = 3 [ (gogoproto.nullable) = false ];
}

message EventCompleteExecution {
  string creator = 1;
  string id = 2;
  repeated cosmos.base.v1beta1.Coin burn_coins = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin pay_coins = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin transfer_coins = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin fee_coins = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin coin_outputs = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated Item mint_items = 8 [ (gogoproto.nullable) = false ];
  repeated Item modify_items = 9 [ (gogoproto.nullable) = false ];
}

message EventDropExecution {
  string creator = 1;
  string id = 2;
}

message EventCompleteExecutionEarly {
  string creator = 1;
  string id = 2;
}

message EventSendItems {
  string sender = 1;
  string receiver = 2;
  repeated ItemRef items = 3 [ (gogoproto.nullable) = false ];
}

message EventSetItemString {
  string creator = 1;
  string cookbook_id = 2;
  string id = 3;
  repeated StringKeyValue original_mutable_strings = 4
      [ (gogoproto.nullable) = false ];
}

message EventCreateTrade {
  string creator = 1;
  uint64 id = 2;
}

message EventCancelTrade {
  string creator = 1;
  uint64 id = 2;
}

message EventFulfillTrade {
  uint64 id = 1;
  string creator = 2;
  string fulfiller = 3;
  repeated ItemRef item_inputs = 4 [ (gogoproto.nullable) = false ];
  repeated cosmos.base.v1beta1.Coin coin_inputs = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated ItemRef item_outputs = 6 [ (gogoproto.nullable) = false ];
  repeated cosmos.base.v1beta1.Coin coin_outputs = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated PaymentInfo payment_infos = 8 [ (gogoproto.nullable) = false ];
}

message EventGooglePurchase {
  string creator = 1;
  string product_id = 2;
  string purchase_token = 3;
  string receipt_data_base64 = 4;
  string signature = 5;
}

message EventStripePurchase {
  string creator = 1;
  string id = 2;
}

message EventApplePurchase {
  string creator = 1;
  string product_id = 2;
  string transaction_id = 3;
  string receipt_data_base64 = 4;
}
